[gd_scene load_steps=10 format=3 uid="uid://c6i444hfu1ubb"]

[ext_resource type="Texture2D" uid="uid://dosfytbognym1" path="res://assets/Purple.png" id="1_8odv0"]
[ext_resource type="Script" path="res://game_over_ui/game_over_ui.gd" id="1_8von2"]
[ext_resource type="Texture2D" uid="uid://qxyjy57fk7ex" path="res://assets/panel_beigeLight.png" id="2_5y61v"]
[ext_resource type="LabelSettings" uid="uid://dd41qgkmicend" path="res://assets/LG_96_TITLE.tres" id="3_07wki"]
[ext_resource type="FontFile" uid="uid://b7v8csrpsc52c" path="res://assets/LuckiestGuy-Regular.ttf" id="4_58x6w"]
[ext_resource type="Texture2D" uid="uid://by2nymv6em8m3" path="res://assets/yellow_button00.png" id="6_iwne8"]
[ext_resource type="LabelSettings" uid="uid://p7e0udyhsvsl" path="res://assets/GL_32_WH.tres" id="7_jbi4j"]

[sub_resource type="LabelSettings" id="LabelSettings_0orp1"]
font = ExtResource("4_58x6w")
font_size = 48
font_color = Color(0.447059, 1, 1, 1)
outline_size = 18
outline_color = Color(0.356863, 0.380392, 0.85098, 1)

[sub_resource type="LabelSettings" id="LabelSettings_af4p2"]
font = ExtResource("4_58x6w")
font_size = 48
font_color = Color(0.980392, 0.584314, 0.470588, 1)
outline_size = 18
outline_color = Color(0.356863, 0.380392, 0.85098, 1)

[node name="GameOverUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8von2")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_8odv0")
stretch_mode = 1

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="NP" type="NinePatchRect" parent="MC"]
layout_mode = 2
texture = ExtResource("2_5y61v")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="MC" type="MarginContainer" parent="MC/NP"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VB" type="VBoxContainer" parent="MC/NP/MC"]
layout_mode = 2

[node name="Label" type="Label" parent="MC/NP/MC/VB"]
layout_mode = 2
text = "LEVEL COMPLETE"
label_settings = ExtResource("3_07wki")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="MC/NP/MC/VB"]
layout_mode = 2
size_flags_vertical = 3

[node name="MovesLabel" type="Label" parent="MC/NP/MC/VB"]
layout_mode = 2
text = "xxx Moves Taken"
label_settings = SubResource("LabelSettings_0orp1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer2" type="Control" parent="MC/NP/MC/VB"]
layout_mode = 2
size_flags_vertical = 3

[node name="RecordLabel" type="Label" parent="MC/NP/MC/VB"]
layout_mode = 2
text = "A new record!"
label_settings = SubResource("LabelSettings_af4p2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer3" type="Control" parent="MC/NP/MC/VB"]
layout_mode = 2
size_flags_vertical = 3

[node name="MainMenuBtn" type="TextureButton" parent="MC/NP/MC/VB"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("6_iwne8")

[node name="Label" type="Label" parent="MC/NP/MC/VB/MainMenuBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Main Menu"
label_settings = ExtResource("7_jbi4j")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MC/NP/MC/VB/MainMenuBtn" to="." method="_on_main_menu_btn_pressed"]
